# GoldMiner

./: .gitignore  CMakeLists.txt  bagel.h  bagel_cfg.h  main.cpp  main_visual.cpp
breakoutGame/: breakout_game.cpp  breakout_game.h  test_firstPart.cpp
goldMiner/: gold_miner_ecs.cpp  gold_miner_ecs.h  sprite_manager.cpp  sprite_manager.h
